Fixed letter-spacing of last character headings

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,10 @@ body {
     display: block; /* use block element to stack the headings */
     font-size: 60px;
     font-weight: 400;
+
     letter-spacing: 35px;
+    direction:rtl;
+    text-indent:-35px; /* counteract letter-spacing for last character */
 
     animation-name: moveInLeft;
     animation-duration: 1s;
@@ -83,7 +86,10 @@ body {
     display: block;
     font-size: 20px;
     font-weight: 700;
-    letter-spacing: 17.2px;
+
+    letter-spacing: 17px;
+    direction:rtl;
+    text-indent:-17px;
 
     /* shorten property */
     animation: moveInRight 1s ease-out;
